added sign up in top nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 <body>
 	<%= link_to "home" , root_path %>
 	<%= link_to "about" , about_path %>
+	<%= link_to "signup" , about_path %>
 	<%= yield %>
-	
+
 </body>
 </html>
