--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
+<div class="jumbotron">
 <h1>About us</h1>
-<b>We are working on our One Month Rail Pinteresting App</b>
+<b>Learn more about us on here!</b>
+</div>
