--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<div class="jumbotron">
-<h1>Welcome to my app</h1>
-<p>Click here to</p>
-	<p><%= link_to "Sign up" , "#", class: "btn btn-primary btn-lg" %><c/p>
+<div class="jumbotron center">
+<h1>Welcome to awesome-town!</h1>
+<p>Click Sign Up below to get started!
+	<p><%= link_to "Sign up" , "#", class: "btn btn-primary btn-lg" %>
+		<%= link_to "Log In" , "#", class: "btn btn-secondary btn-lg underline" %></p>
 </div>
