--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Pinteresting" , root_path , class: "navbar-brand" %>
+      <%= link_to "Awesome-Town" , root_path , class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,7 @@
         <li><%= link_to "About", about_path %></li>
       <% if user_signed_in? %>
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to "Account Settings", edit_user_registration_path %></li>
       <% else %>
         <li><%= link_to "Log In", new_user_session_path %></li>
         <% end %>
