not too much can go back to last if any errors

--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
+    <p></p>
   </div>
 <% end %>
