--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -12,9 +12,9 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
-        <td><%= link_to 'Show', pin %></td>
-        <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', pin, class: "btn btn-lg" %></td>
+        <td><%= link_to 'Edit', edit_pin_path(pin), class: "btn btn-lg"  %></td>
+        <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'No more awesome?' }, class: "btn btn-lg"  %></td>
       </tr>
     <% end %>
   </tbody>
